# RandD

./: README.md  agent.py  configs.py  kernel.ipynb  main.py  testing_semantic_kernel.py
project_smartfly/: README.md  pyproject.toml  report.md
project_smartfly/knowledge/: user_preference.txt
project_smartfly/src/project_smartfly/: crew.py  main.py
templates/: index.html
