[project]
name = "project_smartfly"
version = "0.1.0"
description = "project_smartfly using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.117.1,<1.0.0"
]

[project.scripts]
project_smartfly = "project_smartfly.main:run"
run_crew = "project_smartfly.main:run"
train = "project_smartfly.main:train"
replay = "project_smartfly.main:replay"
test = "project_smartfly.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
